--- a/clients.html
+++ b/clients.html
@@ -2,109 +2,131 @@
 <html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Bespoke clothing company">
-    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
-    <meta name="author" content="Alexiye">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="Bespoke clothing company" />
+    <meta
+      name="keywords"
+      content="bespoke, clothing, tailored, unique, craftsmanship"
+    />
+    <meta name="author" content="Alexiye" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
-  </head> 
-<body>
-<header id="header">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+  </head>
+  <body>
+    <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
           <a href="index.html" target="_self">
-          <h1>GAR DE'ROBA</h1>
+            <h1>GAR DE'ROBA</h1>
           </a>
         </div>
-          <nav>
-            <ul>  
-              <li id="home" class="tooltip"><a href="index.html">Home</a>
-              </li>
-              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-              </li>
-              <li id="clients" class="this tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="phone-ribbon">
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
+        <nav>
+          <ul>
+            <li id="home" class="tooltip"><a href="index.html">Home</a></li>
+            <li id="bespoke" class="tooltip">
+              <a href="portfolio.html">Bespoke Clothing</a>
+            </li>
+            <li id="clients" class="this tooltip">
+              <a href="clients.html">Our Clients</a>
+            </li>
+            <li id="contact" class="tooltip">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="phone-ribbon">
+          <a href="tel:+381643233157"
+            ><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a
+          >
+        </div>
       </div>
-</header>
-<main>
-<div class="center">  
-    <section>
-        <article id="anya" class="article-grid">
-            <img src="assets/img/anya.jpg" alt="Woman sitting on the stairs">
+    </header>
+    <main>
+      <div class="center">
+        <section>
+          <article id="anya" class="article-grid">
+            <img src="assets/img/anya.jpg" alt="Woman sitting on the stairs" />
             <div>
-            <div id="anya-title">
-              <h2>Anya <br><span class="fw-300">Romanova</span></h2>
-              <div class="u-shape"></div>
-              <div class="u-shape-dot"></div>
+              <div id="anya-title">
+                <h2>Anya <br /><span class="fw-300">Romanova</span></h2>
+                <div class="u-shape"></div>
+                <div class="u-shape-dot"></div>
+              </div>
+              <div id="anya-content">
+                <h3>Fashion model</h3>
+                <p>
+                  &ldquo;As a fashion model, I've worked with many designers and
+                  tailors, but
+                  <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly
+                  stands out in their attention to detail and personalized
+                  service&bdquo;
+                </p>
+              </div>
             </div>
-            <div id="anya-content">
-              <h3>Fashion model</h3>
-              <p>&ldquo;As a fashion model, I've worked with many designers and tailors, 
-                but <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> truly stands out 
-                in their attention to detail and personalized service&bdquo;</p>
+          </article>
+          <article id="tamara" class="article-grid">
+            <div id="slogan" class="flex-col">
+              <p>Graceful.</p>
+              <p>Effortless.</p>
+              <p>Dependable.</p>
+              <p><span class="fw-600">Gar De'Roba.</span></p>
             </div>
+            <div class="flex-row">
+              <div id="tamara-content">
+                <h2>Tamara</h2>
+                <p>Makeup Brand Ambassador</p>
+                <p>
+                  &ldquo;My job requires that I always look my best. While that
+                  entails many things, <br />with
+                  <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
+                  at least one of them is effortlessly taken care of. Whether
+                  it's formal C-suite meetings, product presentations or general
+                  content production, your talilors got my back.&bdquo;
+                </p>
+              </div>
+              <img
+                src="assets/img/tamara.jpg"
+                alt="Woman walking to the right"
+              />
             </div>
-        </article>
-        <article id="tamara" class="article-grid"> 
-          <div id="slogan" class="flex-col">
-            <p>Graceful.</p>
-            <p>Effortless.</p>
-            <p>Dependable.</p>
-            <p><span class="fw-600">Gar De'Roba.</span></p>
-          </div>
-          <div class="flex-row">
-            <div id="tamara-content">
-              <h2>Tamara</h2>
-              <p>Makeup Brand Ambassador</p>
-              <p>&ldquo;My job requires that I always look my best. 
-                While that entails many things, <br>with <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>
-                at least one of them is effortlessly taken care of. Whether it's formal C-suite meetings,
-                product presentations or general content production, your talilors got my back.&bdquo;
-              </p>
-            </div>
-            <img src="assets/img/tamara.jpg" alt="Woman walking to the right">
-          </div>
-        </article>
-    </section>
-</div>
-</main>
-<footer>
-  <div id="copyright" class="flex-row">
-  <h3>&COPY; 2023, Gar De'Roba</h3>
-  <p>All rights reserved</p>
-  </div>
-  <div id="footer-links" class="flex-row">
-    <ul class="flex-row">  
-      <li class="tooltip"><a href="index.html">Home</a>
-      </li>
-      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-      </li>
-      <li class="this tooltip"><a href="clients.html">Our Clients</a></li>
-      <li class="tooltip"><a href="contact.html">Contact Us</a>
-      </li>
-    </ul>
-    <div id="footer-icons" class="flex-row">
-    <p>Us, elsewhere:</p>
-    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
-    <div class="spacer-1"></div>
-    <p>Developers:</p>
-    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
-    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
-    <div class="spacer-1"></div>
-    <a href="author.html">by Alexiye</a>
-    </div>
-  </div>
-</footer>
-</body>
+          </article>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div id="copyright" class="flex-row">
+        <h3>&COPY; 2023, Gar De'Roba</h3>
+        <p>All rights reserved</p>
+      </div>
+      <div id="footer-links" class="flex-row">
+        <ul class="flex-row">
+          <li class="tooltip"><a href="index.html">Home</a></li>
+          <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a></li>
+          <li class="this tooltip"><a href="clients.html">Our Clients</a></li>
+          <li class="tooltip"><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="footer-icons" class="flex-row">
+          <p>Us, elsewhere:</p>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="zmdi zmdi-facebook-box"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="zmdi zmdi-instagram"></i
+          ></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          <div class="spacer-1"></div>
+          <p>Developers:</p>
+          <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+          <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+          <div class="spacer-1"></div>
+          <a href="author.html">by Alexiye</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
