--- a/index.html
+++ b/index.html
@@ -2,145 +2,186 @@
 <html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Bespoke clothing company">
-    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
-    <meta name="author" content="Alexiye">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="Bespoke clothing company" />
+    <meta
+      name="keywords"
+      content="bespoke, clothing, tailored, unique, craftsmanship"
+    />
+    <meta name="author" content="Alexiye" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
-  </head> 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+  </head>
   <body>
-<header id="header">
+    <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
           <a href="index.html" target="_self">
-          <h1>GAR DE'ROBA</h1>
+            <h1>GAR DE'ROBA</h1>
           </a>
         </div>
-          <nav>
-            <ul>  
-              <li id="home" class="this tooltip"><a href="index.html">Home</a>
-              </li>
-              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-              </li>
-              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="phone-ribbon">
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
+        <nav>
+          <ul>
+            <li id="home" class="this tooltip">
+              <a href="index.html">Home</a>
+            </li>
+            <li id="bespoke" class="tooltip">
+              <a href="portfolio.html">Bespoke Clothing</a>
+            </li>
+            <li id="clients" class="tooltip">
+              <a href="clients.html">Our Clients</a>
+            </li>
+            <li id="contact" class="tooltip">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="phone-ribbon">
+          <a href="tel:+381643233157"
+            ><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a
+          >
+        </div>
       </div>
-</header>
-<main>
-  <div class="cover">
-    <div class="left-cover">
-      <aside>
-        <h2>Welcome to Gar De'Roba</h2> 
-        <p>where we believe that <span class="emphasize">every</span> 
-          woman deserves to feel confident 
-            and beautiful in her own skin.<br>
-            We specialize in creating bespoke clothing<br> 
-          that is tailor-made to <span class="emphasize">your</span> 
-          unique measurements<br> and preferences.</p>
-        <div class="cta-black"><a href="#learn-more">Learn more</a></div>
-      </aside>
-    </div>
-    <div class="right-cover cover-img">
-      <div class="filter"></div>
-      <div class="cta">
-        <a href="portfolio.html">
-        <h2>Bespoke Clothing</h2>
-        <p>Discover your unique style</p>
-        </a>
+    </header>
+    <main>
+      <div class="cover">
+        <div class="left-cover">
+          <aside>
+            <h2>Welcome to Gar De'Roba</h2>
+            <p>
+              where we believe that <span class="emphasize">every</span> woman
+              deserves to feel confident and beautiful in her own skin.<br />
+              We specialize in creating bespoke clothing<br />
+              that is tailor-made to <span class="emphasize">your</span> unique
+              measurements<br />
+              and preferences.
+            </p>
+            <div class="cta-black"><a href="#learn-more">Learn more</a></div>
+          </aside>
+        </div>
+        <div class="right-cover cover-img">
+          <div class="filter"></div>
+          <div class="cta">
+            <a href="portfolio.html">
+              <h2>Bespoke Clothing</h2>
+              <p>Discover your unique style</p>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-<section>
-  <div class="center whatis">
-    <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
-    <p>Whether you're looking for a stunning evening gown,
-      a perfectly fitted blazer,<br> or anything in between, 
-      we've got you covered.<br> 
-      We work closely with you to ensure that every detail is just right,<br> 
-      from the fabric selection to the finishing touches.</p>
-      <div class="cta-black"><a href="portfolio.html">Discover</a></div>
-  </div>
-</section>
-<section class="center">
-  <div class="article-grid gap-15 mar-15">
-    <div class="left-image">
-      <img src="./assets/img/tailor1.jpg" alt="Consultation with a tailor">
-    </div>
-    
-    <article id="consultation">
-    <h2 class="header-italic">Creating Your Perfectly Tailored Clothing</h2>
-    <p>Our process starts with a consultation, either in person or online, 
-      where we get to know you and your style preferences.
-      We'll take precise measurements and discuss your expectations, 
-      so we can create a garment that is expertly crafted just for you.</p>
-      <div class="cta-black"><a href="contact.html">Start now</a></div>
-    </article>
-    
-  </div>
-  <div class="article-grid gap-15">
-    <div class="line-grid">
-      <div class="relative">
-        <article id="portfolio">
-          <div></div>
-          <div><a href="portfolio.html"><h2 class="header-italic">Our portfolio</h2></a>
-            <p>Browse our portfolio of previously completed work 
-            to get inspired and see the quality of our craftsmanship.</p></div>
-        </article>
+      <section>
+        <div class="center whatis">
+          <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
+          <p>
+            Whether you're looking for a stunning evening gown, a perfectly
+            fitted blazer,<br />
+            or anything in between, we've got you covered.<br />
+            We work closely with you to ensure that every detail is just
+            right,<br />
+            from the fabric selection to the finishing touches.
+          </p>
+          <div class="cta-black"><a href="portfolio.html">Discover</a></div>
+        </div>
+      </section>
+      <section class="center">
+        <div class="article-grid gap-15 mar-15">
+          <div class="left-image">
+            <img
+              src="./assets/img/tailor1.jpg"
+              alt="Consultation with a tailor"
+            />
+          </div>
+
+          <article id="consultation">
+            <h2 class="header-italic">
+              Creating Your Perfectly Tailored Clothing
+            </h2>
+            <p>
+              Our process starts with a consultation, either in person or
+              online, where we get to know you and your style preferences. We'll
+              take precise measurements and discuss your expectations, so we can
+              create a garment that is expertly crafted just for you.
+            </p>
+            <div class="cta-black"><a href="contact.html">Start now</a></div>
+          </article>
+        </div>
+        <div class="article-grid gap-15">
+          <div class="line-grid">
+            <div class="relative">
+              <article id="portfolio">
+                <div></div>
+                <div>
+                  <a href="portfolio.html"
+                    ><h2 class="header-italic">Our portfolio</h2></a
+                  >
+                  <p>
+                    Browse our portfolio of previously completed work to get
+                    inspired and see the quality of our craftsmanship.
+                  </p>
+                </div>
+              </article>
+            </div>
+            <img
+              src="./assets/img/tailor2.jpg"
+              alt="Tailor preparing for work"
+            />
+          </div>
+          <div class="line-grid gap-15">
+            <article id="vision" class="block-pad">
+              <h2 class="header-italic">Your vision</h2>
+              <p>
+                After the consultation, we'll work diligently to bring your
+                vision to life. We believe in transparency, so we'll keep you
+                updated on the progress of your garment and invite you to at
+                least one fitting session to ensure that everything fits
+                perfectly.
+              </p>
+              <div class="cta-black">
+                <a href="contact.html">Book a consultation</a>
+              </div>
+            </article>
+            <img
+              src="./assets/img/vision.jpg"
+              alt="Woman wearing a dress in the field of roses"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div id="copyright" class="flex-row">
+        <h3>&COPY; 2023, Gar De'Roba</h3>
+        <p>All rights reserved</p>
       </div>
-      <img src="./assets/img/tailor2.jpg" alt="Tailor preparing for work">   
-    </div>
-    <div class="line-grid gap-15">
-      <article id="vision" class="block-pad">
-        <h2 class="header-italic">Your vision</h2>
-        <p>After the consultation, we'll work diligently to bring your vision to life.
-        We believe in transparency, so we'll keep you updated on the progress of your garment 
-        and invite you to at least one fitting session 
-        to ensure that everything fits perfectly.</p>
-        <div class="cta-black"><a href="contact.html">Book a consultation</a></div>
-      </article>
-      <img src="./assets/img/vision.jpg" alt="Woman wearing a dress in the field of roses">
-    </div>
-  </div>
-  
-  </section>
-</main>
-<footer>
-  <div id="copyright" class="flex-row">
-  <h3>&COPY; 2023, Gar De'Roba</h3>
-  <p>All rights reserved</p>
-  </div>
-  <div id="footer-links" class="flex-row">
-    <ul class="flex-row">  
-      <li  class="this tooltip"><a href="index.html">Home</a>
-      </li>
-      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-      </li>
-      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li class="tooltip"><a href="contact.html">Contact Us</a>
-      </li>
-    </ul>
-    <div id="footer-icons" class="flex-row">
-    <p>Us, elsewhere:</p>
-    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
-    <div class="spacer-1"></div>
-    <p>Developers:</p>
-    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
-    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
-    <div class="spacer-1"></div>
-    <a href="author.html">by Alexiye</a>
-    </div>
-  </div>
-</footer>
-</body>
+      <div id="footer-links" class="flex-row">
+        <ul class="flex-row">
+          <li class="this tooltip"><a href="index.html">Home</a></li>
+          <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a></li>
+          <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+          <li class="tooltip"><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="footer-icons" class="flex-row">
+          <p>Us, elsewhere:</p>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="zmdi zmdi-facebook-box"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="zmdi zmdi-instagram"></i
+          ></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          <div class="spacer-1"></div>
+          <p>Developers:</p>
+          <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+          <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+          <div class="spacer-1"></div>
+          <a href="author.html">by Alexiye</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
