--- a/portfolio.html
+++ b/portfolio.html
@@ -2,163 +2,216 @@
 <html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Bespoke clothing company">
-    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
-    <meta name="author" content="Alexiye">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="Bespoke clothing company" />
+    <meta
+      name="keywords"
+      content="bespoke, clothing, tailored, unique, craftsmanship"
+    />
+    <meta name="author" content="Alexiye" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
-  </head> 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+  </head>
   <body>
-<header id="header">
+    <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
           <a href="index.html" target="_self">
-          <h1>GAR DE'ROBA</h1>
+            <h1>GAR DE'ROBA</h1>
           </a>
         </div>
-          <nav>
-            <ul>  
-              <li id="home" class="tooltip"><a href="index.html">Home</a>
-              </li>
-              <li id="bespoke" class="this tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-              </li>
-              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="phone-ribbon">
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
-       
+        <nav>
+          <ul>
+            <li id="home" class="tooltip"><a href="index.html">Home</a></li>
+            <li id="bespoke" class="this tooltip">
+              <a href="portfolio.html">Bespoke Clothing</a>
+            </li>
+            <li id="clients" class="tooltip">
+              <a href="clients.html">Our Clients</a>
+            </li>
+            <li id="contact" class="tooltip">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="phone-ribbon">
+          <a href="tel:+381643233157"
+            ><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a
+          >
+        </div>
       </div>
-</header>
-<main>
-  <div class="center">  
-    <section>
-        <article id="gown" class="center-grid">
+    </header>
+    <main>
+      <div class="center">
+        <section>
+          <article id="gown" class="center-grid">
             <div id="gown-title">
-              <h2>Wedding <br><span class="fw-300">Gowns</span></h2>
+              <h2>Wedding <br /><span class="fw-300">Gowns</span></h2>
               <div id="gown-quot">
-                <div><a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
+                <div>
+                  <a href="https://www.facebook.com/"
+                    ><i class="zmdi zmdi-facebook"></i
+                  ></a>
                 </div>
                 <div>
-                  <p>&ldquo;I felt like a queen on my wedding day, thanks to my one-of-a-kind gown from <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>&bdquo;</p>
+                  <p>
+                    &ldquo;I felt like a queen on my wedding day, thanks to my
+                    one-of-a-kind gown from
+                    <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span
+                    >&bdquo;
+                  </p>
                 </div>
               </div>
             </div>
             <div id="gown-image">
-              <img src="assets/img/wedding-dress.jpg" alt="Bride on the rocks">
+              <img
+                src="assets/img/wedding-dress.jpg"
+                alt="Bride on the rocks"
+              />
             </div>
             <div class="flex-col">
               <div id="gown-content">
-                <h3>About</h3>  
-                <p>Our bespoke gowns are designed to make you feel like royalty.
-                From intricate beading to luxurious fabrics, 
-                we'll create a gown that is truly one-of-a-kind.
-                We work closely with you to create a gown that fits your unique style and preferences, 
-                whether you're looking for a classic ball gown or something more modern.
+                <h3>About</h3>
+                <p>
+                  Our bespoke gowns are designed to make you feel like royalty.
+                  From intricate beading to luxurious fabrics, we'll create a
+                  gown that is truly one-of-a-kind. We work closely with you to
+                  create a gown that fits your unique style and preferences,
+                  whether you're looking for a classic ball gown or something
+                  more modern.
                 </p>
               </div>
               <div id="gown-links">
-                  <ul>
+                <ul>
                   <li><a href="contact.html">Get in touch</a></li>
-                  <li><a href="https://www.instagram.com">Visit Instagram</a></li>
-                  </ul>
+                  <li>
+                    <a href="https://www.instagram.com">Visit Instagram</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </article>
+          <article id="blazer" class="center-grid">
+            <div></div>
+            <div class="grid2x2">
+              <div id="blazer-quot" class="flex-col">
+                <div>
+                  <a href="https://www.instagram.com"
+                    ><i class="zmdi zmdi-instagram"></i>
+                  </a>
+                </div>
+                <div>
+                  <p>
+                    &ldquo;Obsessed with my new bespoke blazer from
+                    <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span
+                    >! The fit is perfection and the quality is top-notch. Plus,
+                    the team was amazing to work with and made the whole process
+                    so easy. Highly recommend!&bdquo;
+                  </p>
                 </div>
               </div>
-            
-        </article>
-        <article id="blazer" class="center-grid">
-          <div></div>
-          <div class="grid2x2">
-            <div id="blazer-quot" class="flex-col">
-              <div><a href="https://www.instagram.com"><i class="zmdi zmdi-instagram"></i>
-              </a></div>
-              <div>
-                <p>&ldquo;Obsessed with my new bespoke blazer from <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span>! 
-                  The fit is perfection and the quality is top-notch.
-                  Plus, the team was amazing to work with and made the whole process so easy. 
-                  Highly recommend!&bdquo;</p>
-              </div>
-            </div>
-            <div id="blazer-content">
-              <h3>Why us?</h3>
-              <p>Our bespoke blazers are the perfect addition to any wardrobe. 
-                From casual to formal, our expertly crafted blazers are designed 
-                to make you look and feel your best. We work closely with you 
-                to create a blazer that fits your unique style and preferences. 
-                Whether you're looking for a classic navy blazer or something more daring, 
-                our team will create a blazer that will become a go-to piece in your wardrobe.</p>
-            </div>
-            <div class="relative">
-              <div id="blazer-caption">
-              <h2>Blazers<br><span class="fw-300">&amp; Suits</span></h2>
-              </div>
-            </div>
-            <div id="blazer-img">
-              <img src="assets/img/fun-blazer.jpg" alt="Woman daning while wearing a blazer">
-            </div>
-          </div>
-          <div id="blazer-img-tall">
-            <img src="assets/img/tall.jpg" alt="Tall woman leaning against a concrete wall">
-          </div>
-        </article>
-        <article id="custom" class="center-grid">
-          <div></div>
-          <div class="line-grid gap-15">
-            <div id="custom-img">
-              <img src="assets/img/blazer.jpg" alt="Woman wearing a blazer">
-            </div>
-            <div id="custom-txt">
-              <h2>Personalized perfection.</h2>
-              <p>At our company, we are committed to providing exceptional service 
-                and are always happy to assist with any clothing-related requests. 
+              <div id="blazer-content">
+                <h3>Why us?</h3>
+                <p>
+                  Our bespoke blazers are the perfect addition to any wardrobe.
+                  From casual to formal, our expertly crafted blazers are
+                  designed to make you look and feel your best. We work closely
+                  with you to create a blazer that fits your unique style and
+                  preferences. Whether you're looking for a classic navy blazer
+                  or something more daring, our team will create a blazer that
+                  will become a go-to piece in your wardrobe.
                 </p>
+              </div>
+              <div class="relative">
+                <div id="blazer-caption">
+                  <h2>Blazers<br /><span class="fw-300">&amp; Suits</span></h2>
+                </div>
+              </div>
+              <div id="blazer-img">
+                <img
+                  src="assets/img/fun-blazer.jpg"
+                  alt="Woman daning while wearing a blazer"
+                />
+              </div>
             </div>
-          </div>
-          <div id="custom-fb">
-            <div><a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
+            <div id="blazer-img-tall">
+              <img
+                src="assets/img/tall.jpg"
+                alt="Tall woman leaning against a concrete wall"
+              />
             </div>
-            <div>
-              <p>&ldquo;The team at <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> went above and beyond to create a truly unique and personalized experience, and the result was a wardrobe that truly reflects my individual style and preferences&bdquo;</p>
+          </article>
+          <article id="custom" class="center-grid">
+            <div></div>
+            <div class="line-grid gap-15">
+              <div id="custom-img">
+                <img src="assets/img/blazer.jpg" alt="Woman wearing a blazer" />
+              </div>
+              <div id="custom-txt">
+                <h2>Personalized perfection.</h2>
+                <p>
+                  At our company, we are committed to providing exceptional
+                  service and are always happy to assist with any
+                  clothing-related requests.
+                </p>
+              </div>
             </div>
-          </div>
-        </article>
-    </section>
-</div>
-</main>
-<footer>
-  <div id="copyright" class="flex-row">
-  <h3>&COPY; 2023, Gar De'Roba</h3>
-  <p>All rights reserved</p>
-  </div>
-  <div id="footer-links" class="flex-row">
-    <ul class="flex-row">  
-      <li class="tooltip"><a href="index.html">Home</a>
-      </li>
-      <li class="this tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-      </li>
-      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li class="tooltip"><a href="contact.html">Contact Us</a>
-      </li>
-    </ul>
-    <div id="footer-icons" class="flex-row">
-    <p>Us, elsewhere:</p>
-    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
-    <div class="spacer-1"></div>
-    <p>Developers:</p>
-    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
-    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
-    <div class="spacer-1"></div>
-    <a href="author.html">by Alexiye</a>
-    </div>
-  </div>
-  </footer>
-</body>
+            <div id="custom-fb">
+              <div>
+                <a href="https://www.facebook.com/"
+                  ><i class="zmdi zmdi-facebook"></i
+                ></a>
+              </div>
+              <div>
+                <p>
+                  &ldquo;The team at
+                  <span class="fw-600">Gar De'Roba<sup>&REG;</sup></span> went
+                  above and beyond to create a truly unique and personalized
+                  experience, and the result was a wardrobe that truly reflects
+                  my individual style and preferences&bdquo;
+                </p>
+              </div>
+            </div>
+          </article>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div id="copyright" class="flex-row">
+        <h3>&COPY; 2023, Gar De'Roba</h3>
+        <p>All rights reserved</p>
+      </div>
+      <div id="footer-links" class="flex-row">
+        <ul class="flex-row">
+          <li class="tooltip"><a href="index.html">Home</a></li>
+          <li class="this tooltip">
+            <a href="portfolio.html">Bespoke Clothing</a>
+          </li>
+          <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+          <li class="tooltip"><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="footer-icons" class="flex-row">
+          <p>Us, elsewhere:</p>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="zmdi zmdi-facebook-box"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="zmdi zmdi-instagram"></i
+          ></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          <div class="spacer-1"></div>
+          <p>Developers:</p>
+          <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+          <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+          <div class="spacer-1"></div>
+          <a href="author.html">by Alexiye</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
