--- a/author.html
+++ b/author.html
@@ -2,84 +2,103 @@
 <html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Bespoke clothing company">
-    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
-    <meta name="author" content="Alexiye">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="Bespoke clothing company" />
+    <meta
+      name="keywords"
+      content="bespoke, clothing, tailored, unique, craftsmanship"
+    />
+    <meta name="author" content="Alexiye" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
-  </head> 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+  </head>
   <body>
-<header id="header">
+    <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
           <a href="index.html" target="_self">
-          <h1>GAR DE'ROBA</h1>
+            <h1>GAR DE'ROBA</h1>
           </a>
         </div>
-          <nav>
-            <ul>  
-              <li id="home" class="tooltip"><a href="index.html">Home</a>
-              </li>
-              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-              </li>
-              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="tooltip"><a href="contact.html">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="phone-ribbon">
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
+        <nav>
+          <ul>
+            <li id="home" class="tooltip"><a href="index.html">Home</a></li>
+            <li id="bespoke" class="tooltip">
+              <a href="portfolio.html">Bespoke Clothing</a>
+            </li>
+            <li id="clients" class="tooltip">
+              <a href="clients.html">Our Clients</a>
+            </li>
+            <li id="contact" class="tooltip">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="phone-ribbon">
+          <a href="tel:+381643233157"
+            ><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a
+          >
+        </div>
       </div>
-</header>
-<main>
-  <div id="author" class="left">
-
-      <div class="left-image">
-        <img src="./admin/profile.jpg" alt="Author image">
+    </header>
+    <main>
+      <div id="author" class="left">
+        <div class="left-image">
+          <img src="./admin/profile.jpg" alt="Author image" />
+        </div>
+        <div class="right-text">
+          <h2>Aleksije Vukić</h2>
+          <h3>115/22</h3>
+          <ul>
+            <li>
+              <a href="https://github.com/aleksiye"
+                >GitHub <i class="zmdi zmdi-github-box"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/aleksije-vuki%C4%87-6667ab268/"
+                >LinkedIn <i class="zmdi zmdi-linkedin-box"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="right-text">
-        <h2>Aleksije Vukić</h2>
-        <h3>115/22</h3>
-        <ul>
-          <li><a href="https://github.com/aleksiye">GitHub <i class="zmdi zmdi-github-box"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/aleksije-vuki%C4%87-6667ab268/">LinkedIn <i class="zmdi zmdi-linkedin-box"></i></a></li>
+    </main>
+    <footer>
+      <div id="copyright" class="flex-row">
+        <h3>&COPY; 2023, Gar De'Roba</h3>
+        <p>All rights reserved</p>
+      </div>
+      <div id="footer-links" class="flex-row">
+        <ul class="flex-row">
+          <li class="tooltip"><a href="index.html">Home</a></li>
+          <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a></li>
+          <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+          <li class="tooltip"><a href="contact.html">Contact Us</a></li>
         </ul>
+        <div id="footer-icons" class="flex-row">
+          <p>Us, elsewhere:</p>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="zmdi zmdi-facebook-box"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="zmdi zmdi-instagram"></i
+          ></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          <div class="spacer-1"></div>
+          <p>Developers:</p>
+          <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+          <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+          <div class="spacer-1"></div>
+          <a class="this" href="author.html">by Alexiye</a>
+        </div>
       </div>
-      
-  </div>
-</main>
-<footer>
-  <div id="copyright" class="flex-row">
-  <h3>&COPY; 2023, Gar De'Roba</h3>
-  <p>All rights reserved</p>
-  </div>
-  <div id="footer-links" class="flex-row">
-    <ul class="flex-row">  
-      <li class="tooltip"><a href="index.html">Home</a>
-      </li>
-      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-      </li>
-      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li class="tooltip"><a href="contact.html">Contact Us</a>
-      </li>
-    </ul>
-    <div id="footer-icons" class="flex-row">
-    <p>Us, elsewhere:</p>
-    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
-    <div class="spacer-1"></div>
-    <p>Developers:</p>
-    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
-    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
-    <div class="spacer-1"></div>
-    <a class="this" href="author.html">by Alexiye</a>
-    </div>
-  </div>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
