--- a/contact.html
+++ b/contact.html
@@ -2,131 +2,207 @@
 <html lang="en-US">
   <head>
     <title>GAR DE'ROBA | bespoke clothing company</title>
-    <meta charset="utf-8">
-    <meta name="description" content="Bespoke clothing company">
-    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship">
-    <meta name="author" content="Alexiye">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="Bespoke clothing company" />
+    <meta
+      name="keywords"
+      content="bespoke, clothing, tailored, unique, craftsmanship"
+    />
+    <meta name="author" content="Alexiye" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
-  </head> 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
+  </head>
   <body>
-<header id="header">
+    <header id="header">
       <div class="border-btm top-block">
         <div id="logo">
           <a href="index.html" target="_self">
-          <h1>GAR DE'ROBA</h1>
+            <h1>GAR DE'ROBA</h1>
           </a>
         </div>
-          <nav>
-            <ul>  
-              <li id="home" class="tooltip"><a href="index.html">Home</a>
-              </li>
-              <li id="bespoke" class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-              </li>
-              <li id="clients" class="tooltip"><a href="clients.html">Our Clients</a></li>
-              <li id="contact" class="this tooltip"><a href="contact.html">Contact Us</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="phone-ribbon">
-          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a>
-          </div> 
-       
+        <nav>
+          <ul>
+            <li id="home" class="tooltip"><a href="index.html">Home</a></li>
+            <li id="bespoke" class="tooltip">
+              <a href="portfolio.html">Bespoke Clothing</a>
+            </li>
+            <li id="clients" class="tooltip">
+              <a href="clients.html">Our Clients</a>
+            </li>
+            <li id="contact" class="this tooltip">
+              <a href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="phone-ribbon">
+          <a href="tel:+381643233157"
+            ><i class="zmdi zmdi-whatsapp"> +381 64 32 33 157</i></a
+          >
+        </div>
       </div>
-</header>
-<main>
-    <div id="contact-box" class="center left">
-      <div class="left-image">
-        <h2>Our location:</h2>
-        <p>249 Brighton Beach Ave</p>
-        <p>New York, NY 11235</p>
-        <p>USA</p>
-        <p>Business hours: 9AM to 5PM EDT (UTC-4  )</p>
-        <p>EIN: 89-3433755</p>
-        <div class="spacer-1"></div>
-        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"></iframe><br/>
-        <small><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681">View Larger Map</a></small>  
+    </header>
+    <main>
+      <div id="contact-box" class="center left">
+        <div class="left-image">
+          <h2>Our location:</h2>
+          <p>249 Brighton Beach Ave</p>
+          <p>New York, NY 11235</p>
+          <p>USA</p>
+          <p>Business hours: 9AM to 5PM EDT (UTC-4 )</p>
+          <p>EIN: 89-3433755</p>
+          <div class="spacer-1"></div>
+          <iframe
+            width="425"
+            height="350"
+            src="https://www.openstreetmap.org/export/embed.html?bbox=-73.96870493888856%2C40.57572596671045%2C-73.96491765975954%2C40.577665413612635&amp;layer=mapnik"
+          ></iframe
+          ><br />
+          <small
+            ><a href="https://www.openstreetmap.org/#map=19/40.57670/-73.96681"
+              >View Larger Map</a
+            ></small
+          >
+        </div>
+        <div id="contact-form" class="right-text">
+          <form action="contact.php" method="post">
+            <div class="form-row">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Name"
+                required
+              />
+              <input
+                type="text"
+                name="surname"
+                id="surname"
+                placeholder="Surname"
+                required
+              />
+            </div>
+            <div class="form-row">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+                required
+              />
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                placeholder="Your phone number"
+              />
+            </div>
+            <div class="form-row">
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Type your message here"
+              ></textarea>
+            </div>
+            <div class="form-row">
+              <input type="submit" value="Send" />
+            </div>
+          </form>
+        </div>
       </div>
-      <div id="contact-form" class="right-text">
-        <form action="contact.php" method="post">
-            <div class="form-row">
-            <input type="text" name="name" id="name" placeholder="Name" required>
-            <input type="text" name="surname" id="surname" placeholder="Surname" required>
-            </div>
-            <div class="form-row">
-            <input type="email" name="email" id="email" placeholder="Email" required>
-            <input type="text" name="phone" id="phone" placeholder="Your phone number">
-            </div>
-            <div class="form-row">
-            <textarea id="message" name="message" placeholder="Type your message here"></textarea>
-            </div>
-            <div class="form-row">
-              <input type="submit" value="Send">
-            </div>
-        </form>
-      </div>
-    </div>
-    <div id="faq" class="center">
-      <h2>Frequently Asked Questions</h2>
-      <p class="sub-heading">How long does it take to make a bespoke garment?</p>
-      <p>In short, we recommend allowing <span class="emphasize"> at least 2 and at most 8 weeks</span> before the first fitting. 
-        This timeframe may vary depending on the availability of <span class="emphasize">your chosen materials</span> 
-        and the workload of <span class="emphasize">your chosen tailor</span>. If you have requested a specific tailor, 
-        their availability may also affect the timeline. If you have a specific deadline in mind, 
-        <span class="emphasize">please let us know as soon as possible</span> so we can work together 
-        to ensure your garment is completed on time. 
-        We always strive to deliver high-quality garments within a reasonable timeframe.</p>
+      <div id="faq" class="center">
+        <h2>Frequently Asked Questions</h2>
+        <p class="sub-heading">
+          How long does it take to make a bespoke garment?
+        </p>
+        <p>
+          In short, we recommend allowing
+          <span class="emphasize"> at least 2 and at most 8 weeks</span> before
+          the first fitting. This timeframe may vary depending on the
+          availability of
+          <span class="emphasize">your chosen materials</span> and the workload
+          of <span class="emphasize">your chosen tailor</span>. If you have
+          requested a specific tailor, their availability may also affect the
+          timeline. If you have a specific deadline in mind,
+          <span class="emphasize">please let us know as soon as possible</span>
+          so we can work together to ensure your garment is completed on time.
+          We always strive to deliver high-quality garments within a reasonable
+          timeframe.
+        </p>
 
-        <p class="sub-heading">How many fittings do I need for a bespoke garment?</p>
-        <p><span class="emphasize">We typically schedule one to two fittings</span> for each garment 
-          to ensure that it fits you perfectly. 
-          However, there may be some specific situations where additional fittings may be required. 
-          For instance, if you have significant changes in your body size or shape 
-          during the tailoring process, 
-          we may need to schedule additional fittings to make necessary adjustments.</p>
-        <p class="sub-heading">Do you offer alterations on non-Gar De'Roba garments?</p>
-        <p><span class="emphasize">Yes,</span> we offer alterations on non-Gar De'Roba garments. 
-          However, please keep in mind that the extent of the alterations we can make may be limited. 
-          For example, it is generally easier to remove material from an item 
-          than it is to make a complete garment bigger. 
-          We will do our best to make the desired alterations, 
-          but <span class="emphasize">we cannot guarantee the same level of quality</span> as with our own bespoke garments.</p>
-        <p class="sub-heading">Can I request a specific fabric for my garment?</p>
-        <p><span class="emphasize">Ofcourse</span>, we're happy to source any fabric on behalf of our customers 
-          just be mindful that it <span class="emphasize">might delay the completion</span> of your garment. 
-          It's best to notify your tailor about it at the first consultation.</p>
-    </div>
-</main>
-<footer>
-  <div id="copyright" class="flex-row">
-  <h3>&COPY; 2023, Gar De'Roba</h3>
-  <p>All rights reserved</p>
-  </div>
-  <div id="footer-links" class="flex-row">
-    <ul class="flex-row">  
-      <li  class="tooltip"><a href="index.html">Home</a>
-      </li>
-      <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a>
-      </li>
-      <li class="tooltip"><a href="clients.html">Our Clients</a></li>
-      <li class="this tooltip"><a href="contact.html">Contact Us</a>
-      </li>
-    </ul>
-    <div id="footer-icons" class="flex-row">
-    <p>Us, elsewhere:</p>
-    <a href="https://www.facebook.com/" target="_blank"><i class="zmdi zmdi-facebook-box"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="zmdi zmdi-instagram"></i></a>
-    <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
-    <div class="spacer-1"></div>
-    <p>Developers:</p>
-    <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
-    <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
-    <div class="spacer-1"></div>
-    <a href="author.html">by Alexiye</a>
-    </div>
-  </div>
-</footer>
-</body>
+        <p class="sub-heading">
+          How many fittings do I need for a bespoke garment?
+        </p>
+        <p>
+          <span class="emphasize"
+            >We typically schedule one to two fittings</span
+          >
+          for each garment to ensure that it fits you perfectly. However, there
+          may be some specific situations where additional fittings may be
+          required. For instance, if you have significant changes in your body
+          size or shape during the tailoring process, we may need to schedule
+          additional fittings to make necessary adjustments.
+        </p>
+        <p class="sub-heading">
+          Do you offer alterations on non-Gar De'Roba garments?
+        </p>
+        <p>
+          <span class="emphasize">Yes,</span> we offer alterations on non-Gar
+          De'Roba garments. However, please keep in mind that the extent of the
+          alterations we can make may be limited. For example, it is generally
+          easier to remove material from an item than it is to make a complete
+          garment bigger. We will do our best to make the desired alterations,
+          but
+          <span class="emphasize"
+            >we cannot guarantee the same level of quality</span
+          >
+          as with our own bespoke garments.
+        </p>
+        <p class="sub-heading">
+          Can I request a specific fabric for my garment?
+        </p>
+        <p>
+          <span class="emphasize">Ofcourse</span>, we're happy to source any
+          fabric on behalf of our customers just be mindful that it
+          <span class="emphasize">might delay the completion</span> of your
+          garment. It's best to notify your tailor about it at the first
+          consultation.
+        </p>
+      </div>
+    </main>
+    <footer>
+      <div id="copyright" class="flex-row">
+        <h3>&COPY; 2023, Gar De'Roba</h3>
+        <p>All rights reserved</p>
+      </div>
+      <div id="footer-links" class="flex-row">
+        <ul class="flex-row">
+          <li class="tooltip"><a href="index.html">Home</a></li>
+          <li class="tooltip"><a href="portfolio.html">Bespoke Clothing</a></li>
+          <li class="tooltip"><a href="clients.html">Our Clients</a></li>
+          <li class="this tooltip"><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="footer-icons" class="flex-row">
+          <p>Us, elsewhere:</p>
+          <a href="https://www.facebook.com/" target="_blank"
+            ><i class="zmdi zmdi-facebook-box"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="zmdi zmdi-instagram"></i
+          ></a>
+          <a href="tel:+381643233157"><i class="zmdi zmdi-whatsapp"></i></a>
+          <div class="spacer-1"></div>
+          <p>Developers:</p>
+          <a href="rssfeed.xml"><i class="zmdi zmdi-rss"></i></a>
+          <a href="sitemap.xml"><i class="zmdi zmdi-developer-board"></i></a>
+          <div class="spacer-1"></div>
+          <a href="author.html">by Alexiye</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
